versão 2.0 - data do evento, links atualizados e customizações solicitadas
esta versão possui mais informações sobre os organizadores do evento, data específica do evento
e imagens solicitadas.

foi retirada o icone e o link para a pagina no meetup, que para essa primeira edição do
evento nao será necessária.
foram comentadas as áreas sobre agenda e patrocinadores por enquanto.

todo:
- trabalhar mais na acessibilidade do site
- animações
- contador para o dia do evento

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,9 @@ article:last-child {
 
 #main-title {
     margin-top: 2em;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: row !important;
 }
 
 #main-info h2 {
@@ -122,7 +125,7 @@ article:last-child {
 }
 
 .fa-responsive {
-    font-size: 10em;
+    font-size: 5em;
 }
 
 #mapa {
@@ -132,6 +135,18 @@ article:last-child {
 
 .footer div {
     justify-content: space-around;
+}
+
+#whale-icon {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+}
+
+#main-publi {
+    /*width: 50%;
+    max-width: 700px;*/
+    height: auto;
 }
 
 @media(max-width: 768px) {
@@ -162,10 +177,6 @@ article:last-child {
         font-size: 2.5em;
     }
 
-    .fa-responsive {
-        font-size: 5em;
-    }
-
     .display-4 {
         font-size: 2rem;
     }
@@ -181,5 +192,11 @@ article:last-child {
 
     #local {
         margin-bottom: 0 !important;
+    }
+
+    #main-title {
+        align-items: center !important;
+        justify-content: center !important;
+        flex-direction: column !important;
     }
 }
