Versão 3.0 - Adiciona agenda e link do Sympla

--- a/css/main.css
+++ b/css/main.css
@@ -120,9 +120,10 @@ article:last-child {
     color: #fff;
 }
 
-#inscricoes .card {
-    width: 50% !important;
+.card {
+    padding: 0;
 }
+
 
 .fa-responsive {
     font-size: 5em;
